--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ main {
 }
 
 main h1 {
-  font-size: 8rem;
+  font-size: calc(3rem + 4vw);
   font-weight: 300;
 }
 
@@ -161,7 +161,8 @@ form button {
   font-size: 2rem;
   font-family: "Poppins", sans-serif;
   white-space: nowrap;
-  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .clear {
@@ -173,6 +174,35 @@ form button {
   padding: 1.5rem 5rem;
   font-size: 3rem;
   font-family: inherit;
-  font-weight: 300;
+  font-weight: 400;
   color: white;
+}
+
+.slideRight {
+  animation: slideRight 0.8s ease-out forwards;
+}
+
+.checked .todo-text {
+  text-decoration: line-through;
+  opacity: 0.7;
+  transition: 1s ease-in-out;
+}
+
+.checked .left-btn,
+.checked .todo-text {
+  -webkit-filter: grayscale(1);
+  pointer-events: none;
+}
+
+@keyframes slideRight {
+  to {
+    transform: translateX(200%);
+    opacity: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    color: white;
+  }
 }
